--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.extendedmind</groupId>
@@ -20,13 +20,11 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-
   <scm>
     <connection>scm:git:git@github.com:extendedmind/extendedmind.git</connection>
     <developerConnection>scm:git:git@github.com:extendedmind/extendedmind.git</developerConnection>
     <url>git@github.com:extendedmind/extendedmind.git</url>
   </scm>
-
   <developers>
     <developer>
       <id>ttiurani</id>
@@ -39,7 +37,6 @@
       <email>jukapeka@gmail.com</email>
     </developer>
   </developers>
-
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -56,12 +53,11 @@
       <scope>runtime</scope>
     </dependency>
   </dependencies>
-
   <profiles>
 
     <!-- PhantomJS profiles, copied from here: https://github.com/qa/arquillian-phantom-binary -->
-    <!-- NOTE: http://stackoverflow.com/a/12181394 this needs to be in all 
-      projects that use PhantomJS as a dependency -->
+    <!-- NOTE: http://stackoverflow.com/a/12181394 this needs to be in all
+    projects that use PhantomJS as a dependency -->
     <profile>
       <id>linux-64-phantomjs</id>
       <activation>
@@ -88,11 +84,11 @@
                 <configuration>
                   <target name="download-phantomjs">
                     <get src="${phantomjs.url}" dest="target/phantomjs-linux-64.tar.bz2"
-                      verbose="on" skipexisting="true" />
+                    verbose="on" skipexisting="true" />
                     <bunzip2 src="target/phantomjs-linux-64.tar.bz2"
-                      dest="target/phantomjs-linux-64.tar" />
+                    dest="target/phantomjs-linux-64.tar" />
                     <untar src="target/phantomjs-linux-64.tar"
-                      dest="target" />
+                    dest="target" />
                     <chmod perm="a+x">
                       <fileset dir="${phantomjs.binary.directory}/bin">
                         <include name="phantomjs" />
@@ -107,7 +103,6 @@
       </build>
     </profile>
   </profiles>
-
   <build>
     <testSourceDirectory>${project.basedir}/src/main/webapp/test</testSourceDirectory>
     <plugins>
@@ -163,14 +158,12 @@
               <addClasspath>true</addClasspath>
             </manifest>
           </archive>
-          <packagingExcludes>
-            index_devel.html,
+          <packagingExcludes>index_devel.html,
             test*/**,
             WEB-INF/wro.*,
             static/less*/**,
             static/js*/**,
-            static/lib/less*/**
-          </packagingExcludes>
+            static/lib/less*/**</packagingExcludes>
         </configuration>
       </plugin>
       <plugin>
@@ -232,8 +225,8 @@
     </plugins>
     <pluginManagement>
       <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings 
-          only. It has no influence on the Maven build itself. -->
+        <!--This plugin's configuration is used to store Eclipse m2e settings
+        only. It has no influence on the Maven build itself. -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -256,12 +249,8 @@
                 </pluginExecution>
                 <pluginExecution>
                   <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-antrun-plugin
-                    </artifactId>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
                     <versionRange>[1.7,)</versionRange>
                     <goals>
                       <goal>run</goal>
