--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -7,6 +7,7 @@ extendedmind {
     storeDir = "target/neo4j-test"
     isHighAvailability = false
     startServer = false
+    serverPort = 7473
   }
   security {
     tokenSecret = "0123456789012345"
