--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -32,12 +32,12 @@ extendedmind {
     }
     from = "extended mind <info@ext.md>"
     # Used to create email links
-    urlPrefix = "http://localhost:8081/"
+    urlPrefix = "http://localhost/landing/"
     templates {
       # Set this to use custom emails 
       # directory = "custom_email_template_directory"
       requestInviteConfirmationTitle = "Extended Mind Beta Signup Successful"
-      requestInviteOrderNumberURI = "invite/request"
+      requestInviteOrderNumberURI = "waiting.html?uuid="
     }
   }
 }
