--- a/frontend/core/pom.xml
+++ b/frontend/core/pom.xml
@@ -196,6 +196,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
             <include>lib/angular-carousel/dist/angular-mobile.js</include>
             <include>lib/angularjs/angular-animate.js</include>
             <include>lib/angularjs/angular-touch.js</include>
+            <include>lib/angular-ui/ui-bootstrap-tpls-0.6.0.min.js</include>
             <include>js/*.js</include>
             <include>js/**/*.js</include>
             <include>mockHelpers.js</include>
