--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@
       <dependency>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.version.short}</artifactId>
-        <version>2.0.M5b</version>
+        <version>2.0.RC2</version>
       </dependency>
       <dependency>
         <groupId>org.zeroturnaround</groupId>
