--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -39,7 +39,7 @@
   <properties>
     <neo4j.version>2.0.0-M06</neo4j.version>
     <spray.version>1.2-RC1</spray.version>
-    <akka.version>2.3-20131001-230921</akka.version>
+    <akka.version>2.2.2</akka.version>
   </properties>
 
   <dependencies>
