--- a/frontend/core/src/main/webapp/WEB-INF/wro.properties
+++ b/frontend/core/src/main/webapp/WEB-INF/wro.properties
@@ -1,2 +1,2 @@
-preProcessors=lessCss
-postProcessors=jsMin,cssMin
+preProcessors=cssImport,semicolonAppender   
+postProcessors=jsMin,lessCss,cssMin
