--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -79,6 +79,8 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <!-- Had to move to Dispatch as spray-client and SSL is broken
+         https://groups.google.com/forum/#!topic/spray-user/fCEGCCEJyWE-->
     <dependency>
       <groupId>io.spray</groupId>
       <artifactId>spray-client</artifactId>
@@ -86,7 +88,13 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
-
+    <dependency>
+      <groupId>net.databinder.dispatch</groupId>
+      <artifactId>dispatch-core_2.10</artifactId>
+      <version>0.11.0</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- Neo4j -->
     <dependency>
